# OurPaint

./: .gitignore  CMakeLists.txt
headers/GUI/: ui_mainwindow.h
headers/GUI/Windows/: CastomeIpListWindow.h  CastomeWindowError.h  CastomeWindowSuccessful.h  CastomeWindowWarning.h  WindowServer.h  ui_help.h
src/App/: Application.cpp
src/GUI/: mainwindow.cpp
